EventDto를 통한 에러 검증 및 ModelMapper를 사용하여 EventDto에 Event 객체 주입 테스트 완료 ( 입력값 제한하기)

--- a/demo-inflean-rest-api/pom.xml
+++ b/demo-inflean-rest-api/pom.xml
@@ -63,6 +63,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<!-- Junit4 RunWith 설정 안되있어서 라이브러리 추가 -->
 		<dependency>
 			<groupId>junit</groupId>
