--- a/demo-inflean-rest-api/pom.xml
+++ b/demo-inflean-rest-api/pom.xml
@@ -76,6 +76,13 @@
 			<version>4.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
